# rs-cookie-scanner

./: .gitignore  Cargo.toml  Dockerfile  README.md  index.html  jest.config.js  package-lock.json  package.json
client/: index.html  package-lock.json  package.json
client/src/: App.jsx  index.css
client/src/components/: CookieTable.jsx  ResultsSummary.jsx  ScanConfig.jsx  ScanStatus.jsx
server/src/: classifier.js  index.js  scanner.js
src/: cookie_info.rs  error.rs  lib.rs  main.rs  scanner.rs
tests/: api.test.js  classifier.test.js
